; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_tty_port.c_tty_port_register_device_serdev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_tty_port.c_tty_port_register_device_serdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_port = type { i32 }
%struct.tty_driver = type { i32 }
%struct.device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.device* @tty_port_register_device_serdev(%struct.tty_port* %0, %struct.tty_driver* %1, i32 %2, %struct.device* %3) #0 {
  %5 = alloca %struct.tty_port*, align 8
  %6 = alloca %struct.tty_driver*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.device*, align 8
  store %struct.tty_port* %0, %struct.tty_port** %5, align 8
  store %struct.tty_driver* %1, %struct.tty_driver** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.device* %3, %struct.device** %8, align 8
  %9 = load %struct.tty_port*, %struct.tty_port** %5, align 8
  %10 = load %struct.tty_driver*, %struct.tty_driver** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.device*, %struct.device** %8, align 8
  %13 = call %struct.device* @tty_port_register_device_attr_serdev(%struct.tty_port* %9, %struct.tty_driver* %10, i32 %11, %struct.device* %12, i32* null, i32* null)
  ret %struct.device* %13
}

declare dso_local %struct.device* @tty_port_register_device_attr_serdev(%struct.tty_port*, %struct.tty_driver*, i32, %struct.device*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
